[package]
name = "ruscy-v"
version = "0.1.0"
authors = ["Fabjan Sukalia <fsukalia@gmail.com>"]
description = "Parser and simulator for RISC-V base instruction set"
repository = "https://github.com/fsasm/ruscy-v"
readme = "./README.md"
keywords = ["risc-v", "risc", "simulator"]
license = "GPL-3.0"

[dependencies]
